--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner">
 			<div class="logo_nav">
-				<img src="logo.png" height="75"> 
+				<img src="logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -242,17 +242,32 @@
 		<div class="footer_container">
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>Öppetider</strong></h3>
-				<p style="color: white;">Mån - Tors 10:30-20:00</p>
+					<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+						<br>
+						Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
+						<br>
+						Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
+					</p>
 			</div>
 
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>Öppetider</strong></h3>
-				<p style="color: white;">Mån - Tors 10:30-20:00</p>
+					<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+						<br>
+						Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
+						<br>
+						Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
+					</p>
 			</div>
 
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>Öppetider</strong></h3>
-				<p style="color: white;">Mån - Tors 10:30-20:00</p>
+					<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+						<br>
+						Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
+						<br>
+						Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
+					</p>
 			</div>
 		</div>
 
