--- a/meny.html
+++ b/meny.html
@@ -2,12 +2,13 @@
 
 <html lang="sv">
 
+
 <head>
-	<title> Gammlia Pizzeria </title>
+	<title> Gammlia Pizzeria | Meny </title>
 	<link rel="stylesheet" href="style.css">
 	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
 	<meta name="author" content="Sebatian Gabrielsson">
-	<meta name="description" content="Gammlia pizzerias hemsida">
+	<meta name="description" content="Gammlia pizzerias meny">
 	<meta name="keywords" content="Gammlia pizzeria">
 
 </head>
@@ -20,8 +21,8 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html"><strong><ins> HEM </ins> </strong> </a>
-				<a href="meny.html"><strong> MENY </strong> </a>
+				<a href="index.html"><strong>HEM</strong> </a>
+				<a href="meny.html"><strong><ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
 				<a><strong> BILDGALLERI </strong> </a>
@@ -30,12 +31,6 @@
 			</div>
 		</div>
 	</nav>
-
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
 
 	<footer>
 		<div class="logo_footer">
