--- a/meny.html
+++ b/meny.html
@@ -17,7 +17,7 @@
 	<nav>
 		<div class="banner">
 			<div class="logo_nav">
-				<img src="logo.png" height="75">
+				<img src="/img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -32,9 +32,16 @@
 		</div>
 	</nav>
 
+	<div class="page_title_container">
+
+	</div>
+
+	<div class="meny_title_container">
+	</div>
+
 	<footer>
 		<div class="logo_footer">
-			<img src="logo.png" height="55">
+			<img src="/img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox">
