--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner">
 			<div class="logo_nav">
-				<img src="logo.png" height="75">
+				<img src="/img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -39,7 +39,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="logo.png" height="55">
+			<img src="/img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox">
