--- a/meny.html
+++ b/meny.html
@@ -33,10 +33,16 @@
 	</nav>
 
 	<div class="page_title_container">
-
+		<img src="/img/meny/meny_titel.png" height="100">	
 	</div>
 
-	<div class="meny_title_container">
+	<div class="meny_container">
+		<div class="meny_title_container">
+			<div class="meny_title_container_content">
+				<h3><strong>PIZZOR</strong></h3>
+				<img src="/img/meny/pizza.png">
+			</div>
+		</div>
 	</div>
 
 	<footer>
