--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
 		</div>
 	</nav>
 
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
-	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
+		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
+		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
+		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
+		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
+	<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorem eveniet nemo expedita est minima. Amet
+		sed ea voluptate sit natus repellendus rem placeat, veritatis dicta, quae qui suscipit tempora.</p>
 
 	<footer>
 		<div class="logo_footer">
@@ -44,30 +49,30 @@
 		<div class="footer_container">
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>ÖPPETTIDER</strong></h3>
-					<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
-						<br>
-						Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
-						<br>
-						Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
-					</p>
+				<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+					<br>
+					Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
+					<br>
+					Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
+				</p>
 			</div>
 
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>NAVIGERING</strong></h3>
-					<p style="color: white;">OM OSS &nbsp;
-						<br>
-						MENY &nbsp;
-						<br>
-						KONTAKTA OSS &nbsp;
-					</p>
+				<p style="color: white;">OM OSS &nbsp;
+					<br>
+					MENY &nbsp;
+					<br>
+					KONTAKTA OSS &nbsp;
+				</p>
 			</div>
 
 			<div class="footer_textbox">
 				<h3 style="color: #F2B202;"><strong>KONTAKA OSS</strong></h3>
-					<p style="color: white;">090-77 53 05&nbsp;
-						<br>
-						info@gammliapizzeria.se&nbsp;
-					</p>
+				<p style="color: white;">090-77 53 05&nbsp;
+					<br>
+					info@gammliapizzeria.se&nbsp;
+				</p>
 			</div>
 		</div>
 
