--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<nav>
-		<div class="banner">
+		<div class="banner baloo">
 			<div class="logo_nav">
 				<img src="/img/logo.png" height="75">
 			</div>
@@ -47,9 +47,9 @@
 			<img src="/img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>ÖPPETTIDER</strong></h3>
-				<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
+				<p class="white">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
 					<br>
 					Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
 					<br>
@@ -57,9 +57,9 @@
 				</p>
 			</div>
 
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>NAVIGERING</strong></h3>
-				<p style="color: white;">OM OSS &nbsp;
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
+				<p class="white">OM OSS &nbsp;
 					<br>
 					MENY &nbsp;
 					<br>
@@ -67,9 +67,9 @@
 				</p>
 			</div>
 
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>KONTAKA OSS</strong></h3>
-				<p style="color: white;">090-77 53 05&nbsp;
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
+				<p class="white">090-77 53 05&nbsp;
 					<br>
 					info@gammliapizzeria.se&nbsp;
 				</p>
