--- a/meny.html
+++ b/meny.html
@@ -15,14 +15,14 @@
 
 <body>
 	<nav>
-		<div class="banner">
+		<div class="banner baloo">
 			<div class="logo_nav">
 				<img src="/img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
-				<a href="index.html"><strong>HEM</strong> </a>
-				<a href="meny.html"><strong><ins> MENY </ins> </strong> </a>
+				<a href="index.html"><strong> HEM </strong> </a>
+				<a href="meny.html"><strong> <ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
 				<a><strong> BILDGALLERI </strong> </a>
@@ -38,11 +38,26 @@
 
 	<div class="meny_container">
 		<div class="meny_title_container">
-			<div class="meny_title_container_content">
-				<h3><strong>PIZZOR</strong></h3>
+			<div class="meny_title_container_content baloo yellow bold">
+				<h3>PIZZOR</h3>
 				<img src="/img/meny/pizza.png">
 			</div>
 		</div>
+		
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>1. MARGERITA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Ost </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold" style="font-size: 1.5vw";>
+				<p> 99:- </p>
+			</div>
+		</div>
+		<div class="meny_divider"></div>
 	</div>
 
 	<footer>
@@ -50,32 +65,32 @@
 			<img src="/img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>ÖPPETTIDER</strong></h3>
-					<p style="color: white;">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
-						<br>
-						Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
-						<br>
-						Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
-					</p>
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
+				<p class="white">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+					<br>
+					Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
+					<br>
+					Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
+				</p>
 			</div>
 
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>NAVIGERING</strong></h3>
-					<p style="color: white;">OM OSS &nbsp;
-						<br>
-						MENY &nbsp;
-						<br>
-						KONTAKTA OSS &nbsp;
-					</p>
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
+				<p class="white">OM OSS &nbsp;
+					<br>
+					MENY &nbsp;
+					<br>
+					KONTAKTA OSS &nbsp;
+				</p>
 			</div>
 
-			<div class="footer_textbox">
-				<h3 style="color: #F2B202;"><strong>KONTAKA OSS</strong></h3>
-					<p style="color: white;">090-77 53 05&nbsp;
-						<br>
-						info@gammliapizzeria.se&nbsp;
-					</p>
+			<div class="footer_textbox baloo2">
+				<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
+				<p class="white">090-77 53 05&nbsp;
+					<br>
+					info@gammliapizzeria.se&nbsp;
+				</p>
 			</div>
 		</div>
 
