--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html"><strong><ins> HEM </ins> </strong> </a>
+				<a href="index.html" style="font-size: 13pt;"><strong><ins> HEM </ins> </strong> </a>
 				<a href="meny.html"><strong> MENY </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
@@ -49,7 +49,8 @@
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
-				<p class="white">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
+				<p class="white">
+					Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
 					<br>
 					Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
 					<br>
@@ -59,11 +60,12 @@
 
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
-				<p class="white">OM OSS &nbsp;
+				<p>
+					<a class="white"> OM OSS</a>
 					<br>
-					MENY &nbsp;
+					<a href="meny.html " class="white"> MENY </a>
 					<br>
-					KONTAKTA OSS &nbsp;
+					<a class="white"> KONTAKTA OSS </a>
 				</p>
 			</div>
 
