--- a/meny.html
+++ b/meny.html
@@ -22,7 +22,7 @@
 
 			<div class="navtext">
 				<a href="index.html"><strong> HEM </strong> </a>
-				<a href="meny.html"><strong> <ins> MENY </ins> </strong> </a>
+				<a href="meny.html" style="font-size: 13pt;"><strong> <ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
 				<a><strong> BILDGALLERI </strong> </a>
@@ -37,13 +37,15 @@
 	</div>
 
 	<div class="meny_container">
-		<div class="meny_title_container">
+		<div class="meny_title_container red_fade">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3>PIZZOR</h3>
 				<img src="/img/meny/pizza.png">
 			</div>
 		</div>
 		
+		<!-- KOD PIZZOR -->
+
 		<div class="meny_options_container">
 			<div class="meny_textbox">
 				<div class="pizza_name baloo yellow bold">
@@ -53,11 +55,260 @@
 					<p> Ost </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold" style="font-size: 1.5vw";>
+			<div class="price_textbox baloo2 yellow bold">
 				<p> 99:- </p>
 			</div>
 		</div>
-		<div class="meny_divider"></div>
+		<div class="meny_divider red_fade"></div>
+		
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>2. VESUVIO</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Ost, skinka </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 109:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>3. SORENA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Räkor, färska champinjoner </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>4. CAPRIOCCIOSA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Skinka, färska champinjoner </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>5. HAWAII </p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Skinka, ananas </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>6. BUSSOLA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Skinka, räkor </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>7. ALTONE</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Tonfisk, lök </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>8. DISCO</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Köttfärs. färsk vitlök, färska tomater</p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>9. MALIN SPECIAL</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Skinka, lök, vitlök, ruccola, bearnaisesås</p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 119:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>10. MILANO</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Färska champinjoner, köttfärs, lök</p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 119:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>11. MARINARA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Räkor, tonfisk, musslor </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 124:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>12. VENEZIA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Köttfärs, lök, paprika, ägg </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 124:- </p>
+			</div>
+		</div>
+		<div class="meny_divider red_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>13. MAXIM</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Skinka, räkor, färska champinjoner </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 124:- </p>
+			</div>
+		</div>
+
+		<!-- KOD VEGETARISKA PIZZOR -->
+
+		<div class="meny_title_container green_fade">
+			<div class="meny_title_container_content baloo yellow bold">
+				<h3>VEGETARISKA PIZZOR</h3>
+				<img src="/img/meny/vegetariskpizza.png">
+			</div>
+		</div>
+		
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>14. TUMBA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Färska champinjoner </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 104:- </p>
+			</div>
+		</div>
+		<div class="meny_divider green_fade"></div>
+		
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>15. BAHAMAS</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Färsk ananas, banan, curry </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 109:- </p>
+			</div>
+		</div>
+		<div class="meny_divider green_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>16. FALAFELPIZZA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Falafal, tomat, peperoni, lök, vitlöksås</p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 124:- </p>
+			</div>
+		</div>
+		<div class="meny_divider green_fade"></div>
+
+		<div class="meny_options_container">
+			<div class="meny_textbox">
+				<div class="pizza_name baloo yellow bold">
+					<p>17. SPENATPIZZA</p>
+				</div>
+				<div class="pizza_ingredients baloo2 white">
+					<p> Färska champinjoner, lök, fetaost, kalamataoliver, spenat, färsk vitlök </p>
+				</div>
+			</div>
+			<div class="price_textbox baloo2 yellow bold">
+				<p> 115:- </p>
+			</div>
+		</div>
+		<div class="meny_divider green_fade"></div>
+
 	</div>
 
 	<footer>
@@ -77,11 +328,12 @@
 
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
-				<p class="white">OM OSS &nbsp;
+				<p>
+					<a class="white"> OM OSS</a>
 					<br>
-					MENY &nbsp;
+					<a href="meny.html "class="white"> MENY </a>
 					<br>
-					KONTAKTA OSS &nbsp;
+					<a class="white"> KONTAKTA OSS </a>
 				</p>
 			</div>
 
