--- a/index.html
+++ b/index.html
@@ -49,32 +49,28 @@
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
-				<p class="white">
-					Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;
-					<br>
-					Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;
-					<br>
-					Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp;
-				</p>
+				<ul class="white">
+					<li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
+					<li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
+					<li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
+				</ul>
 			</div>
 
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
-				<p>
-					<a class="white"> OM OSS</a>
-					<br>
-					<a href="meny.html " class="white"> MENY </a>
-					<br>
-					<a class="white"> KONTAKTA OSS </a>
-				</p>
+				<ul class="white">
+					<li> <a> OM OSS</a> </li>
+					<li> <a href="meny.html"> MENY </a></li>
+					<li> <a> KONTAKTA OSS </a> </li>
+				</ul>
 			</div>
 
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
-				<p class="white">090-77 53 05&nbsp;
-					<br>
-					info@gammliapizzeria.se&nbsp;
-				</p>
+				<ul class="white">
+					<li>090-77 53 05&nbsp;</li>
+					<li>info@gammliapizzeria.se&nbsp; </li>
+				</ul>
 			</div>
 		</div>
 
