--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html" style="font-size: 13pt;"><strong><ins> HEM </ins> </strong> </a>
+				<a href="index.html" style="color: #BF8E06"><strong><ins> HEM </ins> </strong> </a>
 				<a href="meny.html"><strong> MENY </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
@@ -60,7 +60,7 @@
 				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
 				<ul class="white">
 					<li> <a> OM OSS</a> </li>
-					<li> <a href="meny.html"> MENY  </a></li>
+					<li> <a href="meny.html"> MENY </a></li>
 					<li> <a> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
