--- a/meny.html
+++ b/meny.html
@@ -22,7 +22,7 @@
 
 			<div class="navtext">
 				<a href="index.html"><strong> HEM </strong> </a>
-				<a href="meny.html" style="font-size: 13pt;"><strong> <ins> MENY </ins> </strong> </a>
+				<a href="meny.html" style="color: #BF8E06"><strong> <ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
 				<a><strong> BILDGALLERI </strong> </a>
@@ -32,8 +32,13 @@
 		</div>
 	</nav>
 
+	<div class="text_size_container">
+		Text
+	</div>	
+
 	<div class="page_title_container">
-		<img src="/img/meny/meny_titel.png" height="100">	
+		<img src="/img/meny/meny_titel.png" height="100">
+
 	</div>
 
 	<div class="meny_container">
