--- a/meny.html
+++ b/meny.html
@@ -9,7 +9,7 @@
 	<meta name="charset" content="UTF-8"> <!--Visar att vi har med ÅÄÖ på hemsidan-->
 	<meta name="author" content="Sebatian Gabrielsson">
 	<meta name="description" content="Gammlia pizzerias meny">
-	<meta name="keywords" content="Gammlia pizzeria">
+	<meta name="keywords" content="Gammlia pizzeria meny">
 
 </head>
 
@@ -25,16 +25,22 @@
 				<a href="meny.html" style="color: #BF8E06"><strong> <ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
-				<a><strong> BILDGALLERI </strong> </a>
+				<a href="bildgalleri.html"><strong> BILDGALLERI </strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
 				<a><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
-	</nav>
 
-	<div class="text_size_container">
-		Text
-	</div>	
+		<div class="text_size_container baloo">
+			<p>Textstorlek</p>
+
+			<div class="button_container">
+				<button title="kommer fungera sen med javascript"> + </button>
+				<button title="kommer fungera sen med javascript"> - </button>
+			</div>
+
+		</div>
+	</nav>
 
 	<div class="page_title_container">
 		<img src="/img/meny/meny_titel.png" height="100">
@@ -48,7 +54,7 @@
 				<img src="/img/meny/pizza.png">
 			</div>
 		</div>
-		
+
 		<!-- KOD PIZZOR -->
 
 		<div class="meny_options_container">
@@ -65,7 +71,7 @@
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
-		
+
 		<div class="meny_options_container">
 			<div class="meny_textbox">
 				<div class="pizza_name baloo yellow bold">
@@ -253,7 +259,7 @@
 				<img src="/img/meny/vegetariskpizza.png">
 			</div>
 		</div>
-		
+
 		<div class="meny_options_container">
 			<div class="meny_textbox">
 				<div class="pizza_name baloo yellow bold">
@@ -268,7 +274,7 @@
 			</div>
 		</div>
 		<div class="meny_divider green_fade"></div>
-		
+
 		<div class="meny_options_container">
 			<div class="meny_textbox">
 				<div class="pizza_name baloo yellow bold">
@@ -348,8 +354,7 @@
 			</div>
 		</div>
 
-	</footer
-
+	</footer>
 </body>
 
 </html>
