--- a/index.html
+++ b/index.html
@@ -20,14 +20,24 @@
 			</div>
 
 			<div class="navtext">
-				<a href="index.html" style="color: #BF8E06"><strong><ins> HEM </ins> </strong> </a>
-				<a href="meny.html"><strong> MENY </strong> </a>
+				<a href="index.html"  style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
+				<a href="meny.html""><strong>MENY</strong> </a>
 				<a><strong> LUNCH </strong> </a>
 				<a><strong> AVHÄMTNING </strong> </a>
-				<a><strong> BILDGALLERI </strong> </a>
+				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
 				<a><strong> RECENSIONER </strong> </a>
 			</div>
+		</div>
+
+		<div class="text_size_container baloo">
+			<p>Textstorlek</p>
+
+			<div class="button_container">
+				<button title="kommer fungera sen med javascript"> + </button>
+				<button title="kommer fungera sen med javascript"> - </button>
+			</div>
+
 		</div>
 	</nav>
 
