--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -23,7 +23,7 @@
 				<a href="index.html"  ><strong> HEM</strong> </a>
 				<a href="meny.html""><strong>MENY</strong> </a>
 				<a><strong> LUNCH </strong> </a>
-				<a><strong> AVHÄMTNING </strong> </a>
+				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html" style="color: #BF8E06"> <strong> <ins> BILDGALLERI </ins></strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
 				<a><strong> RECENSIONER </strong> </a>
