--- a/meny.html
+++ b/meny.html
@@ -24,7 +24,7 @@
 				<a href="index.html"><strong> HEM </strong> </a>
 				<a href="meny.html" style="color: #BF8E06"><strong> <ins> MENY </ins> </strong> </a>
 				<a><strong> LUNCH </strong> </a>
-				<a><strong> AVHÄMTNING </strong> </a>
+				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"><strong> BILDGALLERI </strong> </a>
 				<a><strong> KONTAKTA OSS </strong> </a>
 				<a><strong> RECENSIONER </strong> </a>
@@ -50,7 +50,7 @@
 	<div class="meny_container">
 		<div class="meny_title_container red_fade">
 			<div class="meny_title_container_content baloo yellow bold">
-				<h3>PIZZOR</h3>
+				<h3 class="text_shadow">PIZZOR</h3>
 				<img src="/img/meny/pizza.png">
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 		<!-- KOD PIZZOR -->
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>1. MARGERITA</p>
 				</div>
@@ -66,14 +66,14 @@
 					<p> Ost </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 99:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>2. VESUVIO</p>
 				</div>
@@ -81,14 +81,14 @@
 					<p> Ost, skinka </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 109:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>3. SORENA</p>
 				</div>
@@ -96,14 +96,14 @@
 					<p> Räkor, färska champinjoner </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>4. CAPRIOCCIOSA</p>
 				</div>
@@ -111,14 +111,14 @@
 					<p> Skinka, färska champinjoner </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>5. HAWAII </p>
 				</div>
@@ -126,14 +126,14 @@
 					<p> Skinka, ananas </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>6. BUSSOLA</p>
 				</div>
@@ -141,14 +141,14 @@
 					<p> Skinka, räkor </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>7. ALTONE</p>
 				</div>
@@ -156,14 +156,14 @@
 					<p> Tonfisk, lök </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>8. DISCO</p>
 				</div>
@@ -171,14 +171,14 @@
 					<p> Köttfärs. färsk vitlök, färska tomater</p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>9. MALIN SPECIAL</p>
 				</div>
@@ -186,14 +186,14 @@
 					<p> Skinka, lök, vitlök, ruccola, bearnaisesås</p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 119:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>10. MILANO</p>
 				</div>
@@ -201,14 +201,14 @@
 					<p> Färska champinjoner, köttfärs, lök</p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 119:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>11. MARINARA</p>
 				</div>
@@ -216,14 +216,14 @@
 					<p> Räkor, tonfisk, musslor </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 124:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>12. VENEZIA</p>
 				</div>
@@ -231,14 +231,14 @@
 					<p> Köttfärs, lök, paprika, ägg </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 124:- </p>
 			</div>
 		</div>
 		<div class="meny_divider red_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>13. MAXIM</p>
 				</div>
@@ -246,7 +246,7 @@
 					<p> Skinka, räkor, färska champinjoner </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 124:- </p>
 			</div>
 		</div>
@@ -255,13 +255,13 @@
 
 		<div class="meny_title_container green_fade">
 			<div class="meny_title_container_content baloo yellow bold">
-				<h3>VEGETARISKA PIZZOR</h3>
+				<h3 class="text_shadow">VEGETARISKA PIZZOR</h3>
 				<img src="/img/meny/vegetariskpizza.png">
 			</div>
 		</div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>14. TUMBA</p>
 				</div>
@@ -269,14 +269,14 @@
 					<p> Färska champinjoner </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 104:- </p>
 			</div>
 		</div>
 		<div class="meny_divider green_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>15. BAHAMAS</p>
 				</div>
@@ -284,14 +284,14 @@
 					<p> Färsk ananas, banan, curry </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 109:- </p>
 			</div>
 		</div>
 		<div class="meny_divider green_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>16. FALAFELPIZZA</p>
 				</div>
@@ -299,14 +299,14 @@
 					<p> Falafal, tomat, peperoni, lök, vitlöksås</p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 124:- </p>
 			</div>
 		</div>
 		<div class="meny_divider green_fade"></div>
 
 		<div class="meny_options_container">
-			<div class="meny_textbox">
+			<div class="meny_textbox text_shadow">
 				<div class="pizza_name baloo yellow bold">
 					<p>17. SPENATPIZZA</p>
 				</div>
@@ -314,7 +314,7 @@
 					<p> Färska champinjoner, lök, fetaost, kalamataoliver, spenat, färsk vitlök </p>
 				</div>
 			</div>
-			<div class="price_textbox baloo2 yellow bold">
+			<div class="price_textbox baloo2 yellow bold text_shadow">
 				<p> 115:- </p>
 			</div>
 		</div>
