--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
 					öppet alla dagar i veckan och ser fram emot att servera dig!
 					Välkommen in!</b></p>
-			<a href="recensioner.html" class="baloo">Kontakta oss här</a>
+			<a href="recensioner.html" class="Button baloo">Kontakta oss här</a>
 		</div>
 	</div>
-
 	<div class="home_meny_container">
 		<div class="pizza_container">
 			<div class="pizza_text_container">
@@ -73,7 +72,13 @@
 			</div>
 		</div>
 	</div>
-
+	<div class="recensioner_container">
+		<div class="recensioner_textbox">
+			<h2 class="baloo ">Recensioner</h3>
+			<p class="baloo2 ">Vill du berätta om ditt senaste besök eller läsa om andras?</p>
+			<a href="recensioner.html" class="Button baloo">Se våra recensioner</a>
+		</div>
+	</div>
 
 	<footer>
 		<div class="logo_footer">
