--- a/lunch.html
+++ b/lunch.html
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="video_container">
-				<video src="img/lunch/lunchvideo.mp4" autoplay controls width="500px" height="500px"></video>
+				<video src="img/lunch/lunchvideo.mp4" autoplay controls></video>
 			</div>
 
 			<iframe
